--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#cccccc;
+}
+h1,h2{
+	display:flex;
+	justify-content:center;
+}
+.player_one,.player_two{
+	display:flex;
+	justify-content:center;
+	flex-direction:column;
+	border:1px solid black;
+	background-color:white;
+	border-radius:5px;
+	padding:5px;
+}
+.two{
+	display:flex;
+	align-items:center;
+	flex-direction:column;
+}
+
+
+
+
+
+
+
+
+
+
