--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 /*  your css code here. If applicable */
 body{
-	background-color:#cccccc;
+	background-color:rgb(204, 204, 204);
 }
 h1,h2{
 	display:flex;
 	justify-content:center;
+	text-align:center;
+}
+
+.player_one ul{
+	list-style-type: none;
+}
+
+.player_one{
+	text-decoration:none;
 }
 .player_one,.player_two{
 	display:flex;
